--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,13 +8,19 @@ permissions:
   checks: write
   contents: write
 
+concurrency:
+  group: image-push-main
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # force push 前提
 
       - name: Install dependencies
         run: |
@@ -33,12 +39,17 @@ jobs:
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
-          git config --global http.postBuffer 2097152 # 2GB
+
+          # ★ 安定化設定
+          git config --global core.compression 6
+          git config --global http.postBuffer 1073741824
+
           shopt -s globstar nullglob
           git add **/*.png
+
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Add Pictures"
-            git push --force origin main
+            git push origin main --force-with-lease
           fi
