--- a/.github/workflows/GFS.yml
+++ b/.github/workflows/GFS.yml
@@ -34,7 +34,7 @@ jobs:
           echo "=== GFS cleanup start ==="
           ls -l
           if [ -d GFS ]; then
-            find GFS -maxdepth 1 -mindepth 1 -type d -mmin +6000 -print -exec rm -rf {} +
+            find GFS -mindepth 1 -maxdepth 1 -type d ! -newermt "100 hours ago" -print -exec rm -rf {} +
           else
             echo "GFS directory does not exist."
           fi
